Trying to fix z-index : 2

--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -11,11 +11,11 @@
 }
 
 .right-side.right {
-    z-index: -100;
+    z-index: 0;
 }
 
 .right-side.left {
-    z-index: -100;
+    z-index: 0;
 }
 
   .header {
